style.css
body {
    background-color: #0f0f11; 
    color: #ffffff;            
}
header{
    position: fixed;
    width: 100%;
    top: 0;
    background-color: rgba(15, 15, 15, 0.7); 
    backdrop-filter: blur(10px);
    border-bottom: 1px solid rgba(0, 255, 128, 0.1);
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
   
ul{
    display: flex;
    gap: 2rem;
    list-style: none;
    padding-right: 20px;
}
ul a{
    text-decoration: none;
    color:white;
    
}
ul a:hover{
    color:  #00ff80;
}
.logo{
    color: #00ff80;
     text-decoration: none; 
     font-weight: bold; 
     font-size: 1.5rem;
     
}
.logo a{
    text-decoration: none;
     color: #00ff80;
     padding-left: 10px;
}

#home{
    min-height: 100vh;
    display: flex;
    align-items: center;
    padding-top: 80px;
}
.hero-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0.2rem;
}
.hero-content h2{
    color: #00ff80;;
}
.hero-content h1 {
    font-size: 3.5rem;
    font-weight: 700;       /* Bold look ke liye */
    margin-bottom: 0.5rem;  /* Neeche h2 se thoda gap rakhne ke liye */
    color: #ffffff;
}
.hero-image{
    img{
        height:320px ;
        width: 320px;
        border-radius: 50%;
        border: 3px solid #00ff80;
        box-shadow: 0 0 25px rgba(0, 255, 128, 0.6);
    }
}
.hero-content a{
 text-decoration: none; 
 background-color: #00ff80; 
 color: #000; 
 padding: 10px 20px; 
 border-radius: 5px; 
 font-weight: bold;
}

#skills{
    padding: 80px 2rem;
    text-align: center;
}
#skills h2{
    font-size: 2.3rem;
    font-weight: 600;
    color:#ffffff;
    margin-bottom: 3rem;
}
.skills-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 2rem;
    max-width: 1200px;
    margin: 0 auto;
}
.skill-card{
    background-color: #1a1a1f;
    border: 1px solid #2a2a35;
    border-radius: 12px;
    padding: 2rem;
    text-align: left;
    transition: transform 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
}
.skill-card h3{
    color:#00ff80
}
.skill-card li{
color: white;
}
.skill-card:hover{
    transform: translateY(-8px);
    border-color: #00ff80;
    box-shadow: 0 5px 20px rgba(0, 255, 128, 0.2);
}

